# qRECaRTiVi

./: .gitignore  Makefile.am  Makefile.in  README  README.md  __init__.py  aclocal.m4  application.py  configure  configure.ac  mainwindow.py  requirements.txt  resources.py  resources.qrc  style.qss  trayicon.py  utils.py
images/: Makefile.am  Makefile.in
qrecartivi/: Makefile.am  __init__.py  application.py  mainwindow.py  menus.py  statusbar.py  struct.py  trayicon.py  utils.py
qrecartivi/addons/: Makefile.am  addon.py  addonmanager.py
qrecartivi/dialogs/: Makefile.am  __init__.py  pyconsole.py  settings.py
qrecartivi/tabs/: Makefile.am  __init__.py  abos.py
tabs/: Makefile.am  Makefile.in  __init__.py  abos.py
